<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addlist.AddListFragment">

    <ScrollView
        android:id="@+id/svFoodList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/addFoodListBtnContainer"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/foodListContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addFoodListBtnContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/vScDis">

        <Button
            android:id="@+id/btnAddFoodList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_padding"
            android:background="@drawable/rounded_corner_white_bg"
            android:drawableEnd="@drawable/baseline_add_circle_24"
            android:padding="@dimen/large_padding"
            android:src="@drawable/baseline_add_circle_24"
            android:text="@string/add_food_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vScDis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/large_padding"
        app:layout_constraintBottom_toTopOf="@id/totalAmountLayout">

        <Button
            android:id="@+id/btnPercentageToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_teal_700_bg"
            android:drawableEnd="@drawable/baseline_arrow_downward_24"
            android:text="@string/percentage_baht_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvServiceCharge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_charge"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintBottom_toBottomOf="@+id/etServiceChargeAmount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etServiceChargeAmount" />

        <com.teerapat.moneydivider.widget.ThousandSeparatedEditText
            android:id="@+id/etServiceChargeAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:hint="@string/zero_amount"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size_20sp"
            app:isSeparateByCommas="true"
            app:layout_constraintEnd_toStartOf="@id/tvServiceChargePercentage"
            app:layout_constraintTop_toBottomOf="@id/btnPercentageToggle"
            app:noOfDecimals="2"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/tvServiceChargePercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentage_sign"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintBottom_toBottomOf="@id/etServiceChargeAmount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/etServiceChargeAmount" />

        <TextView
            android:id="@+id/tvVat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vat"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintBottom_toBottomOf="@id/etVatAmount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/etVatAmount" />

        <com.teerapat.moneydivider.widget.ThousandSeparatedEditText
            android:id="@+id/etVatAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:hint="@string/zero_amount"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size_20sp"
            app:isSeparateByCommas="true"
            app:layout_constraintEnd_toStartOf="@id/tvVatPercentage"
            app:layout_constraintTop_toBottomOf="@id/etServiceChargeAmount"
            app:noOfDecimals="2"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/tvVatPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentage_sign"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintBottom_toBottomOf="@id/etVatAmount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/etVatAmount" />

        <TextView
            android:id="@+id/tvDiscount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintBottom_toBottomOf="@id/etDiscountAmount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/etDiscountAmount" />
        
        <com.teerapat.moneydivider.widget.ThousandSeparatedEditText
            android:id="@+id/etDiscountAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:hint="@string/zero_amount"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size_20sp"
            app:isSeparateByCommas="true"
            app:layout_constraintEnd_toStartOf="@id/tvDiscountPercentage"
            app:layout_constraintTop_toBottomOf="@id/etVatAmount"
            app:noOfDecimals="2"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/tvDiscountPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentage_sign"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintBottom_toBottomOf="@id/etDiscountAmount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/etDiscountAmount" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/totalAmountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/large_padding"
        app:layout_constraintBottom_toTopOf="@id/footer">

        <TextView
            android:id="@+id/tvTotalAmountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_amount"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTotalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_amount"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/space_12dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corner_teal_700_bg"
            android:drawableEnd="@drawable/baseline_double_arrow_24"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>