<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/foodListCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/foodCardContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_32dp"
        android:layout_marginTop="@dimen/space_12dp"
        android:layout_marginEnd="@dimen/space_10dp"
        android:layout_marginBottom="@dimen/space_06dp"
        app:cardCornerRadius="@dimen/space_05dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ivDeleteFoodList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/space_13dp">

            <EditText
                android:id="@+id/etFoodList"
                android:layout_width="@dimen/space_120dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorGreen82B79C"
                android:ellipsize="end"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/font_zen_maru_gothic"
                android:hint="@string/food_name"
                android:inputType="textVisiblePassword|textNoSuggestions"
                android:labelFor="@id/etFoodList"
                android:maxLength="25"
                android:maxLines="1"
                android:textColor="@color/colorGreen066E38"
                android:textColorHint="@color/colorGreen82B79C"
                android:textSize="@dimen/text_size_18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Autofill,LabelFor" />

            <com.teerapat.moneydivider.widget.ThousandSeparatedEditText
                android:id="@+id/etFoodPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorGreen82B79C"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/font_zen_maru_gothic"
                android:hint="@string/price_text"
                android:inputType="numberDecimal"
                android:labelFor="@id/etFoodPrice"
                android:textColor="@color/colorGreen066E38"
                android:textColorHint="@color/colorGreen82B79C"
                android:textSize="@dimen/text_size_18sp"
                app:layout_constraintEnd_toStartOf="@id/tvPersonPerFoodCard"
                app:layout_constraintTop_toTopOf="@id/etFoodList"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/tvPersonPerFoodCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_zen_maru_gothic"
                android:textColor="@color/colorGray666565"
                android:textSize="@dimen/text_size_18sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/etFoodPrice"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/etFoodPrice"
                tools:text="@string/max_amount_person"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/ivAddNameList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/large_padding"
                android:src="@drawable/add_name_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etFoodList"
                tools:ignore="ContentDescription" />

            <HorizontalScrollView
                android:id="@+id/nameChipScrollContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_08dp"
                android:fillViewport="true"
                android:scrollbars="none"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/vSpacing1"
                app:layout_constraintStart_toEndOf="@id/ivAddNameList"
                app:layout_constraintTop_toBottomOf="@id/etFoodList">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/nameChipContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleLine="true">

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font_zen_maru_gothic"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_16sp"
                        android:visibility="gone"
                        app:chipBackgroundColor="@color/colorGreen066E38"
                        app:chipCornerRadius="@dimen/space_05dp"
                        app:closeIconTint="@color/white"
                        tools:closeIconVisible="true"
                        tools:ellipsize="end"
                        tools:maxWidth="@dimen/space_100dp"
                        tools:text="nameee"
                        tools:visibility="visible" />

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font_zen_maru_gothic"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_16sp"
                        android:visibility="gone"
                        app:chipBackgroundColor="@color/colorGreen066E38"
                        app:chipCornerRadius="@dimen/space_05dp"
                        app:closeIconTint="@color/white"
                        tools:closeIconVisible="true"
                        tools:ellipsize="end"
                        tools:maxWidth="@dimen/space_100dp"
                        tools:text="name"
                        tools:visibility="visible" />

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font_zen_maru_gothic"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_16sp"
                        android:visibility="gone"
                        app:chipBackgroundColor="@color/colorGreen066E38"
                        app:chipCornerRadius="@dimen/space_05dp"
                        app:closeIconTint="@color/white"
                        tools:closeIconVisible="true"
                        tools:ellipsize="end"
                        tools:maxWidth="@dimen/space_100dp"
                        tools:text="name"
                        tools:visibility="visible" />
                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>

            <View
                android:id="@+id/vSpacing1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@id/nameChipScrollContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/nameChipScrollContainer" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/ivDeleteFoodList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_05dp"
        android:layout_marginEnd="@dimen/space_05dp"
        android:elevation="3dp"
        android:src="@drawable/icon_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/foodCardContainer"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>