...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/large_padding">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="@dimen/space_150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_green_name_chip"
                android:ellipsize="end"
                android:fontFamily="@font/font_zen_maru_gothic"
                android:maxLines="1"
...
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/name" />

            <TextView
                android:id="@+id/tvTotalPayAmountPerPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_zen_maru_gothic"
                android:textColor="@color/colorGreen066E38"
                android:textSize="@dimen/text_size_20sp"
                android:textStyle="bold"
...
